[gd_scene load_steps=24 format=2]

[ext_resource path="res://Figuras_Geometricas/Cuadrado_.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scrips/cudrado/Figuras_Cuadrados.gd" type="Script" id=2]
[ext_resource path="res://Imagenes/girar_izq.png" type="Texture" id=3]
[ext_resource path="res://Imagenes/girar_der_.png" type="Texture" id=4]
[ext_resource path="res://Imagenes/girar_der_negro.png" type="Texture" id=5]
[ext_resource path="res://Imagenes/girar_izq_negro.png" type="Texture" id=6]
[ext_resource path="res://Imagenes/fondolado23.png" type="Texture" id=7]
[ext_resource path="res://Imagenes/api.png" type="Texture" id=8]
[ext_resource path="res://Imagenes/tese.png" type="Texture" id=9]
[ext_resource path="res://Imagenes/tese2.png" type="Texture" id=10]
[ext_resource path="res://Imagenes/apilar.png" type="Texture" id=11]
[ext_resource path="res://Imagenes/regree22.png" type="Texture" id=12]
[ext_resource path="res://Imagenes/regree23.png" type="Texture" id=13]
[ext_resource path="res://Imagenes/fondo23.png" type="Texture" id=14]
[ext_resource path="res://Scrips/cudrado/Teselado_Cuadrado.gd" type="Script" id=15]
[ext_resource path="res://Musica/ES_Struggle in the Jungle - Kikoru.mp3" type="AudioStream" id=16]
[ext_resource path="res://Musica/sound-14.mp3" type="AudioStream" id=17]
[ext_resource path="res://Musica/sound-2.mp3" type="AudioStream" id=18]
[ext_resource path="res://Escenas/Instrucciones/Instrucciones.tscn" type="PackedScene" id=19]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "intro"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "intro"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Teselado_Cuadrado" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Figuras_Cuadrados" type="Control" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Imagen" type="Node2D" parent="Figuras_Cuadrados"]

[node name="Imagen_izq" type="Node2D" parent="Figuras_Cuadrados/Imagen"]

[node name="Sprite" type="Sprite" parent="Figuras_Cuadrados/Imagen/Imagen_izq"]
position = Vector2( 209, 540 )
texture = ExtResource( 14 )

[node name="Salir" type="TextureButton" parent="Figuras_Cuadrados/Imagen/Imagen_izq"]
margin_left = 29.0
margin_top = 28.0
margin_right = 167.0
margin_bottom = 166.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R_izq2" type="TextureButton" parent="Figuras_Cuadrados/Imagen/Imagen_izq"]
margin_left = 28.0
margin_top = 626.0
margin_right = 166.0
margin_bottom = 764.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R_der2" type="TextureButton" parent="Figuras_Cuadrados/Imagen/Imagen_izq"]
margin_left = 237.0
margin_top = 626.0
margin_right = 375.0
margin_bottom = 764.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Imagen_der" type="Node2D" parent="Figuras_Cuadrados/Imagen"]

[node name="Sprite" type="Sprite" parent="Figuras_Cuadrados/Imagen/Imagen_der"]
position = Vector2( 1710, 540 )
texture = ExtResource( 7 )

[node name="Teselar" type="TextureButton" parent="Figuras_Cuadrados/Imagen/Imagen_der"]
margin_left = 1633.0
margin_top = 600.0
margin_right = 1771.0
margin_bottom = 738.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apilar" type="TextureButton" parent="Figuras_Cuadrados/Imagen/Imagen_der"]
margin_left = 1633.0
margin_top = 400.0
margin_right = 1771.0
margin_bottom = 538.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cuadrado_26" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_27" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_2" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_3" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_4" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_5" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_6" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_7" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_8" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_9" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_10" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_11" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_12" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_13" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_14" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_15" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_16" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_17" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_18" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_19" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_20" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_21" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_22" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_23" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_24" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Cuadrado_25" parent="Figuras_Cuadrados" instance=ExtResource( 1 )]

[node name="Seleccion" type="AudioStreamPlayer" parent="Figuras_Cuadrados"]
stream = ExtResource( 18 )
volume_db = 10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -16.0

[node name="Salida" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = 10.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.0
margin_top = -4.0
margin_right = 1942.0
margin_bottom = 1087.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="intro" type="AnimationPlayer" parent="ColorRect"]
autoplay = "intro"
anims/RESET = SubResource( 1 )
anims/intro = SubResource( 2 )

[node name="salida" type="AnimationPlayer" parent="ColorRect"]
anims/RESET = SubResource( 3 )
anims/intro = SubResource( 4 )

[node name="Instrucciones" parent="." instance=ExtResource( 19 )]

[connection signal="pressed" from="Figuras_Cuadrados/Imagen/Imagen_izq/Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="Figuras_Cuadrados/Imagen/Imagen_izq/R_izq2" to="Figuras_Cuadrados" method="_on_R_izq2_pressed"]
[connection signal="pressed" from="Figuras_Cuadrados/Imagen/Imagen_izq/R_der2" to="Figuras_Cuadrados" method="_on_R_der2_pressed"]
[connection signal="pressed" from="Figuras_Cuadrados/Imagen/Imagen_der/Teselar" to="Figuras_Cuadrados" method="_on_Teselar_pressed"]
[connection signal="pressed" from="Figuras_Cuadrados/Imagen/Imagen_der/Apilar" to="Figuras_Cuadrados" method="_on_Apilar_pressed"]
[connection signal="animation_finished" from="ColorRect/salida" to="Figuras_Cuadrados" method="_on_salida_animation_finished"]
